fixed button gap and margin

--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -11,8 +11,8 @@
 .sidebar-component .sidebar-control {
   display: grid;
   align-content: start;
-  padding: 0px 10px;
-  gap: 1rem;
+  padding: 0px 1.5rem;
+  gap: 1.5rem;
   margin-top: 1rem;
 }
 
